[tool.poetry]
name = "concurrency-parallelism-and-asyncio"
version = "0.1.0"
description = ""
authors = ["Ugur Yilmaz <u.yilmaz@skatelescope.org>"]

[tool.poetry.dependencies]
python = "^3.8"
binary = "^1.0.0"
aiofiles = "^0.7.0"
aiohttp = "^3.7.4"
astroid = "^2.5.8"
async-timeout = "^3.0.1"
atomicwrites = "^1.4.0"
attrs = "^21.2.0"
beautifulsoup4 = "^4.9.3"
chardet = "^4.0.0"
colorama = "^0.4.4"
idna = "^3.2"
importlib-metadata = "^4.5.0"
isort = "^5.8.0"
lazy-object-proxy = "^1.6.0"
mccabe = "^0.6.1"
more-itertools = "^8.8.0"
multidict = "^5.1.0"
numpy = "^1.20.3"
opencv-python = "^4.5.2"
packaging = "^20.9"
pluggy = "^0.13.1"
py = "^1.10.0"
pyparsing = "^2.4.7"
pytest = "^6.2.4"
pytest-asyncio = "^0.15.1"
six = "^1.16.0"
soupsieve = "^2.2.1"
toml = "^0.10.2"
typed-ast = "^1.4.3"
wcwidth = "^0.2.5"
wrapt = "^1.12.1"
yarl = "^1.6.3"
zipp = "^3.4.1"
black = "^21.6b0"
clean-text = {extras = ["gpl"], version = "^0.4.0"}

[tool.poetry.dev-dependencies]
black = {version = "^21.6b0", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
